tests/ui/mutex_guard_outlast_mutex.stderr
error[E0716]: temporary value dropped while borrowed
  --> tests/ui/mutex_guard_outlast_mutex.rs:10:21
   |
9  |     let guard = {
   |         ----- borrow later stored here
10 |         let mutex = pin!(Mutex::context(5u32));
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
13 |     };
   |     - temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `pin` (in Nightly builds, run with -Z macro-backtrace for more info)
